[package]
name = "ftd-tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftd = { version = "0.1.6" }
ftd-rt = { version = "0.1.1" }
thiserror = "1"
css-color-parser = "0.1.2"
indoc = "1.0.3"
serde = { version = "1" }

[dev-dependencies]
pretty_assertions = { version = "1.0.0"}